--- a/app/globals.css
+++ b/app/globals.css
@@ -19,4 +19,24 @@
   .hover {
     @apply hover:brightness-75;
   }
+  
+  .sidenav {
+    width: var(--sidenav-width);
+    min-width: 14rem; /* 224px */
+    max-width: 24rem; /* 384px */
+  }
+}
+
+.msg::-webkit-scrollbar-button {
+  display: none;
+}
+.msg::-webkit-scrollbar {
+  width: 5px;
+}
+.msg::-webkit-scrollbar-track {
+  background: transparent;
+}
+.msg::-webkit-scrollbar-thumb {
+  background: gray;
+  border-radius: 4px;
 }
